copyright + maho-passkey-tools.js for backend

--- a/app/design/adminhtml/default/default/layout/admin.xml
+++ b/app/design/adminhtml/default/default/layout/admin.xml
@@ -24,6 +24,7 @@
     <!-- admin account edit page -->
     <adminhtml_system_account_index>
         <reference name="head">
+            <action method="addJs"><name>maho-passkey-tools.js</name></action>
             <action method="addJs"><name>mage/adminhtml/system/account.js</name></action>
         </reference>
     </adminhtml_system_account_index>
