--- a/public/skin/adminhtml/default/default/login.css
+++ b/public/skin/adminhtml/default/default/login.css
@@ -117,6 +117,9 @@ input.input-text:disabled {
   outline: none;
   opacity: 0.5;
 }
+input.input-text.validation-failed {
+    border-color: #d6340e;
+}
 
 .form-button {
   background-color: #0090FF;
@@ -220,6 +223,12 @@ ul.messages ul {
 
 .no-display {
   display: none;
+}
+
+#passkey-login-button {
+    width: 100%;
+    height: 32px;
+    margin-top: 10px;
 }
 
 /*# sourceMappingURL=login.css.map */
