--- a/app/design/frontend/rwd/default/template/directory/currency.phtml
+++ b/app/design/frontend/rwd/default/template/directory/currency.phtml
@@ -9,22 +9,16 @@
  * @copyright   Copyright (c) 2024 Maho (https://mahocommerce.com)
  * @license     https://opensource.org/licenses/afl-3.0.php  Academic Free License (AFL 3.0)
  */
+
+/** @var Mage_Directory_Block_Currency $this */
 ?>
-<?php
-/**
- * Currency switcher
- *
- * @see Mage_Directory_Block_Currency
- * @var Mage_Directory_Block_Currency $this
- */
-?>
-<?php if($this->getCurrencyCount()>1): ?>
+<?php if ($this->getCurrencyCount() > 1): ?>
 <div class="currency-switcher">
     <label for="select-currency"><?= $this->__('Your Currency:') ?></label>
     <select id="select-currency" name="currency" title="<?= Mage::helper('core')->quoteEscape($this->__('Your Currency')) ?>" onchange="setLocation(this.value)">
         <?php foreach ($this->getCurrencies() as $_code => $_name): ?>
         <option value="<?= $this->getSwitchCurrencyUrl($_code) ?>"<?php if($_code==$this->getCurrentCurrencyCode()): ?> selected="selected"<?php endif ?>>
-            <?= $_name ?> - <?= $_code ?>
+            <?= Mage::app()->getLocale()->currency($_code)->getSymbol() ?>
         </option>
     <?php endforeach ?>
     </select>
