--- a/app/design/frontend/rwd/default/template/page/html/header.phtml
+++ b/app/design/frontend/rwd/default/template/page/html/header.phtml
@@ -54,33 +54,41 @@
 <?= $this->getChildHtml('topContainer') ?>
 
 <style>
-    .page-header-container div {display: flex; place-items: center;}
+    .page-header-container {padding-top:0.5rem}
+    .page-header-container > div {display: flex; place-items: center; gap: 0.5rem}
+    .page-header-container > div:first-of-type > a:first-of-type {display: none}
     .currency-switcher label, .form-language label {display: none}
-    #search_mini_form {flex-grow: 1;}
+    #search_mini_form {flex-grow: 1; width: 100%}
     .skip-account, .skip-cart {
         display: grid;
         grid-auto-flow: row;
         justify-items: center;
         padding: 0;
-        gap: 0.5rem;
+        gap: 0.1rem;
         border: none;
+        color: var(--maho-color-text-primary)
     }
-    .skip-link {float: none}
     .skip-link .icon {width:30px; height:30px;background-size: 30px;}
-    .skip-link * {margin:0 !important; text-transform: none; line-height:normal}
+    .skip-link * {margin:0 !important; text-transform: none; line-height:normal; font-size: 0.688rem}
+
+    #select-language, #select-currency {border:none; height: 30px;}
 
     @media (max-width: 770px) {
+        .logo img {max-height: 50px}
         .skip-link .label {display: none}
         .page-header-container {
             display: grid !important;
             place-items: normal !important;
+            grid-template-columns: auto min-content;
             grid-template-areas:
                 "logo links"
                 "search search";
+            margin-inline: 1rem;
         }
 
+        .page-header-container > div:first-of-type a:first-of-type {display: block}
         .page-header-container > *:nth-child(1) {grid-area: logo}
-        .page-header-container > *:nth-child(2) {grid-area: search; width: 100%; margin-bottom: 10px}
+        .page-header-container > *:nth-child(2) {grid-area: search; width: 100%; padding-bottom: 20px}
         .page-header-container > *:nth-child(3) {grid-area: links}
     }
 </style>
