--- a/app/design/frontend/rwd/default/template/page/html/header.phtml
+++ b/app/design/frontend/rwd/default/template/page/html/header.phtml
@@ -72,8 +72,11 @@
     .skip-link * {margin:0 !important; text-transform: none; line-height:normal; font-size: 0.688rem}
 
     #select-language, #select-currency {border:none; height: 30px;}
+    #search_mini_form .input-box {text-align: right}
+    #search_mini_form .input-box input {max-width: 450px}
 
     @media (max-width: 770px) {
+        #search_mini_form .input-box input {max-width: none}
         .logo img {max-height: 50px}
         .skip-link .label {display: none}
         .page-header-container {
